# BotaaS-Server

./: .gitignore  Dockerfile  FLOW_NODE_TYPES.md  README.ka.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  test_toxicity_detector.py
alembic/: env.py
alembic/versions/: 4ad8cf29dc86_add_bot_user_association_table.py  f662fa2e6d6e_add_date_column_to_chat_user_message_.py
app/: main.py
app/api/: deps.py
app/api/endpoints/: __init__.py  auth.py  bots.py  broadcast.py  flows.py  webhooks.py
app/core/: config.py  security.py  telegram_auth.py
app/db/: session.py
app/models/: __init__.py  banned_user.py  bot_user.py  chat_user_message_count.py  flow.py  telegram_bot.py  telegram_chat.py  user.py
app/schemas/: flow.py  telegram_bot.py  user.py
app/services/: analytics_service.py  broadcast_manager.py  flow_engine.py  telegram_service.py  toxicity_detector.py  toxicity_estimator.py
fine_tuning_tools/: detox_trainer.ipynb  requirements.txt  test_toxicity_estimator.py  transform_csv.py  translate_to_georgian.py
