[tool.poetry]
name = "botaas-server"
version = "0.1.0"
description = "Backend server for BotaaS"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
sqlalchemy = "^2.0.40"
pydantic = "^2.11.3"
python-dotenv = "^1.1.0"
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
python-telegram-bot = "^21.0"
aiohttp = "^3.10.0"
pydantic-settings = "^2.9.1"
pyjwt = {extras = ["crypto"], version = "^2.10.1"}
python-multipart = "^0.0.20"
email-validator = "^2.2.0"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
